--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       </div>
       <div>
       <h2>Soft skills</h2>
-    <ul>
+    <ul class="soft-skill-list">
       <li class="soft-skill-card">
         <img src="/images/empathy icon.png">
         <h3>Empathy</h3></li>
